--- a/templates/authentication/otp_verify.html
+++ b/templates/authentication/otp_verify.html
@@ -74,7 +74,7 @@
         .otp-box button {
             width: 100%;
             padding: 0.75rem;
-            background-color: #e74c3c; /* Red for urgency/threat detection */
+            background-color: #044ab3; /* Red for urgency/threat detection */
             color: #ffffff;
             border-radius: 5px;
             border: none;
@@ -84,7 +84,7 @@
         }
 
         .otp-box button:hover {
-            background-color: #c0392b;
+            background-color: #3606f6;
         }
 
         .otp-box .error {
